services/titan-execution-rs/check_output_2.txt
warning: unused import: `RiskRejectionReason`
 --> src/api.rs:4:36
  |
4 | use crate::risk_guard::{RiskGuard, RiskRejectionReason};
  |                                    ^^^^^^^^^^^^^^^^^^^
  |
  = note: `#[warn(unused_imports)]` on by default

warning: unused import: `tracing::warn`
 --> src/drift_detector.rs:4:5
  |
4 | use tracing::warn;
  |     ^^^^^^^^^^^^^

warning: unused imports: `Intent` and `Side`
  --> src/nats_engine.rs:12:20
   |
12 | use crate::model::{Intent, IntentType, Side};
   |                    ^^^^^^              ^^^^

warning: unused import: `PipelineResult`
  --> src/nats_engine.rs:20:42
   |
20 | use crate::pipeline::{ExecutionPipeline, PipelineResult};
   |                                          ^^^^^^^^^^^^^^

warning: unused import: `tracing::warn`
 --> src/persistence/redb_store.rs:2:5
  |
2 | use tracing::warn;
  |     ^^^^^^^^^^^^^

warning: unused import: `PipelineResult`
 --> src/replay_engine.rs:6:42
  |
6 | use crate::pipeline::{ExecutionPipeline, PipelineResult};
  |                                          ^^^^^^^^^^^^^^

warning: unused variable: `ttl_ms`
  --> src/persistence/redb_store.rs:50:48
   |
50 | ...otency(&self, key: &str, ttl_ms: i64) -> Result<bool, StoreError> {
   |                             ^^^^^^ help: if this is intentional, prefix it with an underscore: `_ttl_ms`
   |
   = note: `#[warn(unused_variables)]` on by default

warning: unused variable: `expected_sig`
  --> src/security.rs:94:13
   |
94 |         let expected_sig = hex::encode(expected_bytes);
   |             ^^^^^^^^^^^^ help: if this is intentional, prefix it with an underscore: `_expected_sig`

warning: field `correlation_threshold_bps` is never read
  --> src/drift_detector.rs:10:5
   |
6  | pub struct DriftDetector {
   |            ------------- field in this struct
...
10 |     correlation_threshold_bps: f64,
   |     ^^^^^^^^^^^^^^^^^^^^^^^^^
   |
   = note: `#[warn(dead_code)]` on by default

warning: field `ctx` is never read
  --> src/replay_engine.rs:17:5
   |
12 | pub struct ReplayEngine {
   |            ------------ field in this struct
...
17 |     ctx: Arc<ExecutionContext>,
   |     ^^^

warning: field `require_timestamp` is never read
  --> src/security.rs:14:5
   |
12 | pub struct HmacValidator {
   |            ------------- field in this struct
13 |     secret: String,
14 |     require_timestamp: bool,
   |     ^^^^^^^^^^^^^^^^^
   |
   = note: `HmacValidator` has a derived impl for the trait `Clone`, but this is intentionally ignored during dead code analysis

warning: `titan-execution-rs` (lib) generated 11 warnings (run `cargo fix --lib -p titan-execution-rs` to apply 6 suggestions)
warning: unused import: `Path`
 --> src/bin/replay_cli.rs:4:17
  |
4 | use std::path::{Path, PathBuf};
  |                 ^^^^
  |
  = note: `#[warn(unused_imports)]` on by default

warning: unused import: `error`
 --> src/bin/replay_cli.rs:7:27
  |
7 | use tracing::{info, warn, error, level_filters::LevelFilter};
  |                           ^^^^^

warning: unused import: `HttpResponse`
 --> src/auth_middleware.rs:3:25
  |
3 |     Error, HttpMessage, HttpResponse,
  |                         ^^^^^^^^^^^^
  |
  = note: `#[warn(unused_imports)]` on by default

warning: unused import: `tracing_subscriber::FmtSubscriber`
 --> src/main.rs:4:5
  |
4 | use tracing_subscriber::FmtSubscriber;
  |     ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^

warning: unused import: `global`
  --> src/main.rs:64:25
   |
64 |     use opentelemetry::{global, KeyValue};
   |                         ^^^^^^

warning: unused import: `HttpMessage`
 --> src/auth_middleware.rs:3:12
  |
3 |     Error, HttpMessage, HttpResponse,
  |            ^^^^^^^^^^^

    Checking titan-execution-rs v0.1.0 (/Users/ivan/Code/trading/titan/services/titan-execution-rs)
warning: `titan-execution-rs` (bin "replay_cli") generated 2 warnings (run `cargo fix --bin "replay_cli"` to apply 2 suggestions)
warning: `titan-execution-rs` (bin "titan-execution-rs") generated 4 warnings (run `cargo fix --bin "titan-execution-rs"` to apply 3 suggestions)
error[E0063]: missing fields `causation_id`, `env`, `partition_key` and 2 other fields in initializer of `Intent`
  --> src/bin/generate_golden.rs:92:26
   |
92 |             let intent = Intent {
   |                          ^^^^^^ missing `causation_id`, `env`, `partition_key` and 2 other fields

For more information about this error, try `rustc --explain E0063`.
error: could not compile `titan-execution-rs` (bin "generate_golden") due to 1 previous error
